# dopey-rover

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
examples/: grammar.txt  hello_world.dr  trait.dr
src/: lib.rs  main.rs
src/analysis/: mod.rs
src/codegen/: opcode.rs
src/parsing/: mod.rs
src/parsing/lexer/: mod.rs  tokens.rs
src/parsing/parser/: expr.rs  mod.rs
src/parsing/parser/expression/: basic_expressions.rs  block.rs  mod.rs  operators.rs
src/parsing/parser/item/: mod.rs
src/parsing/parser/pattern/: mod.rs
src/parsing/parser/statement/: mod.rs
src/parsing/types/: expressions.rs  mod.rs  patterns.rs
src/types/: error.rs  expressions.rs  items.rs  mod.rs  patterns.rs  statements.rs
