[package]
name = "dopey_rover"
version = "0.1.0"
authors = ["Peter Glotfelty <Peter.Glotfelty@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1", features=["derive"] }
nom = "*"
nom_locate = "*"
rand = "*"
